# PhD

./: .gitignore  README.md  environment.yml  hello_example.py  requirements.txt  setup.cfg  test_upload.py
notebooks/: drought_plots.ipynb
notebooks/python/: RI.ipynb  climate_stats.ipynb  comapre_met_data.ipynb  compare_cable_outputs.ipynb  rainfall_stats.ipynb  test.ipynb
scripts/: flux_data_mask.py
scripts/R/: ausplots.R
scripts/drought/: droughts.py
scripts/flux/: cumulative_annual_gpp.py  flux_M_analysis.py  fluxtower_D_summary.py  fluxtower_M_summary.py
scripts/heat/: heat_waves.py
scripts/python/: ERA-Land_API.py  ERA5_API.py  PET.py  SILO-API.py  SILO_processing.py  SW_indices.py  TerraClim.py  TerraClimate_api.py  climate_indices.py  compare_met-data.py  open_mediaflux.py  xclim_indices.py
src/mediaflux/: mf_utils.py
src/phd_project/: sample.py
utils/: mf_utils.py
