[metadata]
name = phd_project
version = 0.1.0
author = Joseph Phelps
description = PhD research codebase and utilities
license = MIT

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires =
    numpy
    pandas
    xarray
    netCDF4
    requests

[options.packages.find]
where = src
